# ihmc_ros_core-release

./: 0001-Add-FILES_MATCHING-to-the-install-rule.patch  0001-Add-geometry_msgs-dependency.patch  0002-Revert-Add-geometry_msgs-dependency.patch  0002-Updated-CMakeLists.txt.patch  0003-Tweak-install-directory.patch  0004-Tweak-installation-files.patch  0005-Making-gradlew-executable.patch  0006-Revert-Making-gradlew-executable.patch  0007-Revert-Tweak-installation-files.patch  0008-Revert-Tweak-install-directory.patch  0009-Revert-Updated-CMakeLists.txt.patch  0010-Revert-Add-FILES_MATCHING-to-the-install-rule.patch  CHANGELOG.md  CMakeLists.txt  README.md  build.gradle  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/: PULL_REQUEST_TEMPLATE.md
buildSrc/src/main/groovy/us/ihmc/ros/java_adapter/: IHMCROSJavaConfiguration.groovy
debian/: changelog  control  gbp.conf  rules
ihmc_msgs/: CMakeLists.txt  package.xml
ihmc_ros_common/: IHMCNetworking.md
ihmc_ros_common/configurations/: IHMCNetworkParametersTemplate.ini
ihmc_ros_common/launch/: robot_description_common.launch
ihmc_ros_core/: CMakeLists.txt  package.xml
ihmc_ros_java_adapter/: CMakeLists.txt  README.md  build.gradle  package.xml  settings.gradle
ihmc_ros_java_adapter/buildSrc/: build.gradle
ihmc_ros_java_adapter/buildSrc/src/main/groovy/us/ihmc/ros/java_adapter/: IHMCROSJavaDependencyHolder.groovy  IHMCROSJavaVMConfiguration.groovy  IHMCROSJavaYamlTester.groovy
ihmc_ros_java_adapter/buildSrc/src/main/groovy/us/ihmc/ros/java_adapter/yaml/: IHMCROSJavaConfigurationConstructor.groovy  IHMCROSJavaConfigurationRepresenter.groovy  IHMCROSJavaYamlLoader.groovy
ihmc_ros_java_adapter/gradle/wrapper/: gradle-wrapper.properties
rpm/: ros-indigo-ihmc-msgs.spec  ros-indigo-ihmc-ros-common.spec  ros-indigo-ihmc-ros-core.spec  ros-indigo-ihmc-ros-java-adapter.spec  template.spec
