<?xml version="1.0"?>
<package>
  <name>ihmc_msgs</name>
  <version>0.9.1</version>
  <description>The ihmc_msgs package defines the IHMC ROS API</description>

  <maintainer email="dstephen@ihmc.us">Doug Stephen</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://github.com/ihmcrobotics/ihmc_ros_core</url>

  <author email="dstephen@ihmc.us">Doug Stephen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
