<?xml version="1.0"?>
<package>
  <name>ihmc_ros_core</name>
  <version>0.8.0</version>
  <description>The ihmc_ros package contains several ROS packages for interacting with the IHMC Whole Body Controller for humanoid robots.</description>

  <maintainer email="dstephen@ihmc.us">Doug Stephen</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://github.com/ihmcrobotics/ihmc_ros_core</url>

  <author email="dstephen@ihmc.us">Doug Stephen</author>

  <export>
	<metapackage />
  </export>

  <buildtool_depend>catkin</buildtool_depend>

</package>
