<?xml version="1.0"?>
<package>
  <name>ihmc_ros_java_adapter</name>
  <version>0.9.1</version>
  <description>The ihmc_ros_common package provides common functionality for other IHMC ROS packages.</description>

  <maintainer email="dstephen@ihmc.us">Doug Stephen</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://github.com/ihmcrobotics/ihmc_ros_core</url>

  <author email="dstephen@ihmc.us">Doug Stephen</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
